--- a/objectValue.css
+++ b/objectValue.css
@@ -17,7 +17,7 @@
 body {
     background: #333;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,16 +50,29 @@ body {
 #avatar {
     width: 190px;
     height: 190px;
+    border: 4px solid #333;
     border-radius: 100%;
-    box-shadow: 0 0 15px #111;
+    box-shadow: 0 0 15px #111, inset 0 0 8px #333;
     background: #444;
+}
+
+span {
+    color: #999;
+    font-size: 19.5px;
 }
 
 #content {
     width: 95%;
-    height: 300px;
+    height: 280px;
     background: rgb(56, 56, 56);
     box-shadow: 0 0 15px #111;
+    padding: 15px 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 8% 8% 0 0;
 }
 
 #btnBack {
@@ -86,17 +99,48 @@ body {
 #btnBack:hover, #btnForward:hover {
     background: rgb(56, 56, 56);
     text-shadow: 0 0 5px dodgerblue;
+    transition: 0.3s;
 }
 
 
+#btnBack:not(:hover), #btnForward:not(:hover) {
+    transition: 0.3s;
+}
 
 
+@media screen and (max-width: 550px){
+    #content {
+        height: 310px;
+    }
 
+}
 
-/* 
-@media screen and (max-width: 1400px){
-    #container {
-        width: 70%;
+@media screen and (max-width: 400px){
+    #avatar {
+        width: 175px;
+        height: 175px;
+    }
+
+    h1 {
+        font-size: 42px;
+    }
+
+    h2 {
+        font-size: 26px;
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    #btnBack, #btnForward {
+        padding: 12px 20px 16px 20px;
     }
 }
- */
+
+@media screen and (max-width: 350px){
+    #avatar {
+        width: 150px;
+        height: 150px;
+    }
+}
